--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Memory Game</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .card {
@@ -53,7 +54,7 @@
         <div class="card" data-value="C">C</div>
         <div class="card" data-value="D">D</div>
     </div>
-    <button class="reset-button btn btn-primary">Reset...</button>
+    <button class="reset-button btn btn-primary">Reset Game</button>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script>
         $(document).ready(function () {
