--- a/index.html
+++ b/index.html
@@ -44,24 +44,35 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="card" data-value="A">A</div>
-        <div class="card" data-value="B">B</div>
-        <div class="card" data-value="C">C</div>
-        <div class="card" data-value="D">D</div>
-        <div class="card" data-value="A">A</div>
-        <div class="card" data-value="B">B</div>
-        <div class="card" data-value="C">C</div>
-        <div class="card" data-value="D">D</div>
+    <div class="container" id="game-board">
     </div>
     <button class="reset-button btn btn-primary">Reset Game</button>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script>
         $(document).ready(function () {
-            var firstCard = null;
-            var secondCard = null;
-            var lockBoard = false;
-            var matchedCount = 0;
+            const values = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H'];
+            let cards = [...values, ...values];
+            let firstCard = null;
+            let secondCard = null;
+            let lockBoard = false;
+            let matchedCount = 0;
+
+            function createCard(value) {
+                return `<div class="card" data-value="${value}">${value}</div>`;
+            }
+
+            function shuffle(array) {
+                for (let i = array.length - 1; i > 0; i--) {
+                    const j = Math.floor(Math.random() * (i + 1));
+                    [array[i], array[j]] = [array[j], array[i]];
+                }
+            }
+
+            function setupBoard() {
+                shuffle(cards);
+                $('#game-board').html(cards.map(createCard).join(''));
+                $('.card').removeClass('flipped matched');
+            }
 
             function flipCard(card) {
                 card.addClass('flipped');
@@ -84,15 +95,15 @@
                     matchedCount += 2;
                     if (matchedCount === $('.card').length) {
                         setTimeout(function () {
-                            alert('Congrats bro, you win');
-                        }, 500);
+                            alert(' ongrats bro, you win!');
+                        }, 500);//delay it for a sec
                     }
                 } else {
                     unflipCards();
                 }
             }
 
-            $('.card').click(function () {
+            $('#game-board').on('click', '.card', function () {
                 if (lockBoard || $(this).hasClass('flipped') || $(this).hasClass('matched')) return;
                 flipCard($(this));
                 if (!firstCard) {
@@ -105,14 +116,13 @@
             });
 
             $('.reset-button').click(function () {
-                $('.card').removeClass('flipped matched');
-                var values = ['A', 'B', 'C', 'D', 'A', 'B', 'C', 'D'];
-                $('.card').each(function () {
-                    var newValue = values.splice(Math.floor(Math.random() * values.length), 1)[0];
-                    $(this).data('value', newValue).text(newValue);
-                });
+                cards.length = 0;
+                cards.push(...values, ...values);
+                setupBoard();
                 matchedCount = 0;
             });
+
+            setupBoard();
         });
     </script>
 </body>
